fixed some scrollbar issues, transitioned it to being pretty much a drop in type of thing

--- a/css/styles.less
+++ b/css/styles.less
@@ -65,6 +65,8 @@
 }
 
 
+
+
 /* * * Generic Styles * * */
 .bs-list {
 	.absolute(0,0,0,0);
@@ -125,6 +127,11 @@
 	
 	
 	
+}
+
+.bs-scroll_bar_parent {
+	.absolute(0,0,0,0);
+	overflow-y:scroll;
 }
 
 .bs-scroll_bar_gutter {
